--- a/.github/workflows/app.yml
+++ b/.github/workflows/app.yml
@@ -29,5 +29,4 @@ jobs:
           pip install -r requirements.txt
       - name: Test with pytest
         run: |
-          pip install pytest pytest-cov
-          pytest tests.py --doctest-modules --junitxml=junit/test-results.xml --cov=com --cov-report=xml --cov-report=html
+          python3 -m pytest
